--- a/about.css
+++ b/about.css
@@ -34,8 +34,16 @@
 }
 
 @media screen and (max-width: 768px) {
+    html, body {
+        overflow: hidden;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+    }
     #about{
        background-image: url(img/photo9.jpeg);
+       background-repeat: none;
        width: auto;
        padding: 0;
        min-width: 100vh;
