--- a/contacto.css
+++ b/contacto.css
@@ -34,6 +34,13 @@
 }
 
 @media screen and (max-width: 768px) {
+    html, body {
+        overflow: hidden;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+    }
     #contacto{
        background-image: url(img/photo3.jpeg);
        width: auto;
