--- a/about.css
+++ b/about.css
@@ -43,17 +43,22 @@
     }
     #about{
        background-image: url(img/photo9.jpeg);
-       background-repeat: none;
-       width: auto;
-       padding: 0;
-       min-width: 100vh;
-       background-position: -90px;
+       background-repeat: no-repeat;
+        width: 100%;
+        padding: 0;
+        min-height: 100vh;
+        background-position: center;
+        display: flex; /* Usar flexbox */
+        justify-content: center; /* Centrar horizontalmente */
+        align-items: center; /* Centrar verticalmente */
     } 
     .container-2{
-       width: 370px;
-       margin-right: 180px;
+        max-width: 370px; /* Establece el ancho máximo */
+        padding: 0 10px; /* Añade padding horizontal para espacio interno */
+        box-sizing: border-box; /* Incluye el padding y el borde dentro del ancho total */
+        text-align: center; /* Centra el texto dentro del contenedor */
     }
     .container-2 p{
-        margin-right: 10px;
+        margin: 10px 0; /* Añade un margen vertical */
     }
 }
